name:                make-plot
version:             0.1.0.0
synopsis:            Make plot for radix-sort
description:         Please see README.md
homepage:            https://github.com/devonhollowood/radix-sort#readme
license:             BSD3
license-file:        ../LICENSE
author:              Devon Hollowood
maintainer:          devonhollowood@gmail.com
copyright:           2016 Devon Hollowood
category:            Plot
build-type:          Simple
cabal-version:       >=1.10

executable make-plot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hmatrix
                     , hmatrix-gsl-stats
                     , Chart
                     , Chart-cairo
